--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -27,7 +27,7 @@ add_library(logging logging.f90)
 target_compile_options(logging PRIVATE ${FFLAGS})
 set_target_properties(logging PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_executable(test_formats test_formats.f90)
+add_executable(test_formats ${CMAKE_CURRENT_SOURCE_DIR}/../tests/test_formats.f90)
 target_compile_options(test_formats PRIVATE ${FFLAGS})
 target_link_libraries(test_formats PRIVATE fsutils timeutils)
 set_target_properties(test_formats PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
