log artifact [skip appveyor] [skip travis]

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -51,3 +51,5 @@ jobs:
       BUILD_DIR: $(Build.BinariesDirectory)
       FC: gfortran-6
     displayName: 'Meson: build and test'
+  - publish: $(Build.BinariesDirectory)/meson-logs/testlog.txt
+    artifact: TestLog
