--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -45,7 +45,8 @@ jobs:
     displayName: 'setup Meson'
   - script: |
       meson setup $BUILD_DIR $SRC_DIR
-      meson test -C $BUILD_DIR --suite 2d unit
+      meson test -C $BUILD_DIR --suite unit
+      meson test -C $BUILD_DIR --suite 2d
     env:
       SRC_DIR: $(Build.SourcesDirectory)
       BUILD_DIR: $(Build.BinariesDirectory)
