Implement Azure Pipelines CI for Meson and CMake (#2)
* log artifact [skip appveyor] [skip travis]

* Always artifact build log meson [skip travis] [skip appveyor]

* meson download and extract [skip appveyor] [skip travis]

* make ../simulations if not exist [skip travis] [skip appveyor]

* explict ninja build [skip travis] [skip appveyor]

* debug azure paths [skip appveyor] [skip travis]

* setup python prereq

* more debug meson [skip travis] [skip appveyor]

* meson debug extract azure [skip travis] [skip appveyor]

* correct typo

* use urllib.request instead of requests [skip travis] [skip appveyor]

* unit tests first [skip appveyor] [skip travis]

* stdlib only [skip travis] [skip appveyor]

* allow compile if zenodo test data not available, with warning [skip appveyor] [skip travis]

* doc [skip ci]

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -39,15 +39,19 @@ jobs:
     displayName: 'Install Linux prereqs'
   - script: |
       git clone https://github.com/mesonbuild/meson
-      pip install -e meson
+      python -m pip install -e meson
       curl -Ls https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-linux.zip -o ninja-linux.zip
       sudo unzip ninja-linux.zip -d /usr/local/bin/
     displayName: 'setup Meson'
   - script: |
       meson setup $BUILD_DIR $SRC_DIR
-      meson test -C $BUILD_DIR
+      meson test -C $BUILD_DIR --suite unit
+      meson test -C $BUILD_DIR --suite 2d
     env:
       SRC_DIR: $(Build.SourcesDirectory)
       BUILD_DIR: $(Build.BinariesDirectory)
       FC: gfortran-6
-    displayName: 'Meson: build and test'
+    displayName: 'Build and test'
+  - publish: $(Build.BinariesDirectory)/meson-logs/testlog.txt
+    condition: succeededOrFailed()
+    artifact: TestLog
