--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,5 +1,5 @@
 option('HDF', type : 'boolean', value: false, description : 'use HDF5 for IO')
-option('GLOW', type : 'boolean', value: false, description : 'use GLOW instead of Fang')
+option('useglow', type : 'boolean', value: false, description : 'use GLOW instead of Fang')
 option('realbits', type : 'string', value : '64', description : 'real bits')
 option('MPI_ROOT', type : 'string', description : 'root directory of OpenMPI')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
