--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-
-language: minimal
+language: python
 group: travis_latest
 dist: xenial
 
@@ -14,20 +13,18 @@ addons:
     sources: ubuntu-toolchain-r-test
     packages: ['gfortran-6','liblapack-dev','libmumps-dev','libopenmpi-dev','octave']
 
-matrix:
-  include:
-  - os: linux
-# works on osx, but takes 10 minutes to build on Travis-CI
-#  - os: osx
+# works on osx, but Azure is faster
 #    - brew install gcc
 #    - brew install lapack openblas open-mpi scalapack
 #    - brew tap dpo/openblas
 #    - brew install mumps
 
+before_install:
+- git clone https://github.com/mesonbuild/meson
+- python -m pip install -e meson
+- curl -Ls https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-linux.zip -o ninja-linux.zip
+- sudo unzip ninja-linux.zip -d /usr/local/bin/
 
-install:
-- cd $TRAVIS_BUILD_DIR/build
-- cmake -DNP=2 ..
-- cmake --build . --parallel
+install: meson build
 
-script: ctest -R 2D --parallel --output-on-failure
+script: meson test -C build --suite unit
