black PEP8, move test data to tests/data
tests/data from ../simulations

--- a/initialize/3Dtest_eq/config.ini
+++ b/initialize/3Dtest_eq/config.ini
@@ -9,9 +9,9 @@
 0
 1
 0
-../simulations/input//3Dtest_eq/simsize.dat
-../simulations/input//3Dtest_eq/simgrid.dat
-../simulations/input//3Dtest_eq/3Dtest_eq_ICs.dat
+tests/data/input/3Dtest_eq/simsize.dat
+tests/data/input/3Dtest_eq/simgrid.dat
+tests/data/input/3Dtest_eq/3Dtest_eq_ICs.dat
 0
 0
 0
