--- a/initialize/test2d_glow/config.ini
+++ b/initialize/test2d_glow/config.ini
@@ -9,16 +9,16 @@
 0
 2
 0
-../simulations/zenodo2d/inputs/simsize.dat
-../simulations/zenodo2d/inputs/simgrid.dat
-../simulations/zenodo2d/inputs/2Dtest_lowres_ICs.dat
+tests/data/zenodo2d/inputs/simsize.dat
+tests/data/zenodo2d/inputs/simgrid.dat
+tests/data/zenodo2d/inputs/2Dtest_lowres_ICs.dat
 0
 1
 5.0
-../simulations/zenodo2d/inputs/prec_inputs/
+tests/data/zenodo2d/inputs/prec_inputs/
 1
 1.0
-../simulations/zenodo2d/inputs/Efield_inputs/
+tests/data/zenodo2d/inputs/Efield_inputs/
 1
 5.0
 5.0
