--- a/initialize/2Dtest_eq/config.ini
+++ b/initialize/2Dtest_eq/config.ini
@@ -9,9 +9,9 @@
 0
 1
 0
-../simulations/input//2Dtest_eq/simsize.dat
-../simulations/input//2Dtest_eq/simgrid.dat
-../simulations/input//2Dtest_eq/2Dtest_eq_ICs.dat
+tests/data/input/2Dtest_eq/simsize.dat
+tests/data/input/2Dtest_eq/simgrid.dat
+tests/data/input/2Dtest_eq/2Dtest_eq_ICs.dat
 0
 0
 0
