--- a/initialize/test3d/config.ini
+++ b/initialize/test3d/config.ini
@@ -9,14 +9,14 @@
 0
 1
 0
-../simulations/zenodo3d/inputs/simsize.dat
-../simulations/zenodo3d/inputs/simgrid.dat
-../simulations/zenodo3d/inputs/3Dtest_ICs.dat
+tests/data/zenodo3d/inputs/simsize.dat
+tests/data/zenodo3d/inputs/simgrid.dat
+tests/data/zenodo3d/inputs/3Dtest_ICs.dat
 0
 1
 5.0
-../simulations/zenodo3d/inputs/prec_inputs/
+tests/data/zenodo3d/inputs/prec_inputs/
 1
 1.0
-../simulations/zenodo3d/inputs/Efield_inputs/
+tests/data/zenodo3d/inputs/Efield_inputs/
 0
