initial python compare_all
update meta to remove octave

remove obsolete prereqs

remove octave from CI

switch meson to ython compare_all

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env: FC=gfortran-6
 addons:
   apt:
     sources: ubuntu-toolchain-r-test
-    packages: ['gfortran-6','liblapack-dev','libmumps-dev','libopenmpi-dev','octave']
+    packages: ['gfortran-6','liblapack-dev','libmumps-dev','libopenmpi-dev']
 
 # works on osx, but Azure is faster
 #    - brew install gcc
