--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: Atmospheric Science
-license_file =
+license_files =
   LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -28,7 +28,10 @@ long_description_content_type = text/markdown
 python_requires = >= 3.6
 zip_safe = False
 packages = find:
+scripts =
+  tests/compare_all.py
 install_requires =
+  numpy
 
 
 [options.extras_require]
@@ -36,3 +39,8 @@ tests =
   pytest >= 3.9
   flake8
   mypy
+plots =
+  matplotlib
+
+[options.entry_points]
+console_scripts =
